# SentiSign-OMAR

./: .env.example  .gitignore  Makefile  README.md  SETUP.md  main.py  pyproject.toml  run_pipeline.py  run_pipeline_sentence_only.py
data/temporal/asl_dataset/AFTERNOON/: sample_001.npy  sample_002.npy  sample_003.npy  sample_004.npy  sample_005.npy  sample_006.npy  sample_007.npy  sample_008.npy  sample_009.npy  sample_010.npy  sample_011.npy  sample_012.npy  sample_013.npy  sample_014.npy  sample_015.npy
docs/: frontend-migration.md
final year pjt/SentiSign-OMAR/: .gitignore  collect_landmarks.py  main.py  requirements.txt  run_pipeline.py  train_landmark_classifier.py
final year pjt/SentiSign-OMAR/src/: sign_recognizer.py
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: BackendGate.tsx  EmotionStrip.tsx  Gate1WordCheck.tsx  Gate2Gesture.tsx  Gate3Record.tsx  Gate4Success.tsx  SentenceOutput.tsx  WebcamPane.tsx  WizardLayout.tsx  WordBuffer.tsx
frontend/src/layouts/: MainLayout.tsx
frontend/src/model/: ModelContext.tsx
frontend/src/pages/: About.tsx  Communicate.tsx  Contribute.tsx  ContributeLSTM.tsx  SignsGallery.tsx
models/landmark/: label_map.json  landmark_mlp.pth  sign_overrides.example.json
models/temporal/: evaluation_report.txt  temporal_label_map.json
slm/: download_model.py
slm/src/: buffer_clean.py  example_bank.py  generate_sentence.py  sentence_model.py
src/: emotion_detector.py  emotion_map.py  sign_recognizer.py  tts.py
website/static/: index.html
(+934 files in other folders)
